updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a former environmental geologist that now works as a field marketing manager in the outdoor industry. I'm looking forward to exploring this next adventure of learning to code and seeing where it takes me.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Wichita Falls, Texas, but thank goodness my parents moved to Austin when I was one. I moved to Atlanta, Georgia 7 years ago!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm a retired soccer player (thanks injuries!) so now I just watch Atlanta United and daydream. I also hike often, dabble in hip hop dance classes, never put my roller skates down and twirl around the Beltline, and most importantly spend a lot of time telling my chonky cat that he's the best boy and asking my 13 year old Aussie how she got so cute.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working for or with companies I love with the flexibility to work remotely and travel often.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Atlanta! In a home with never-ending projects.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The initial draw is that it seems it could be a good fit for my creative yet scientific/logical brain. I'm also drawn to the flexibility and opportunities it could open up for a career.</p>
     </section>
 
     <footer id="footer">
